# mztabm2mtbls

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.sh  validate_local_study.py
commands/: create_mtbls_submission.py  upload_study.py  validate_local_study.py  validate_study.py
mztab2mtbls/: converter.py  mztab2.py  utils.py
mztab2mtbls/mapper/: base_mapper.py  metadata_base.py  metadata_contact.py  metadata_cv.py  metadata_publication.py  metadata_sample.py
mztabm2mtbls/: converter.py  mztab2.py  opa_engine.py  utils.py
mztabm2mtbls/commands/: cli.py  convert2isatab.py  convert_and_validate_study.py  convert_and_validate_submission.py  create_provisional_study.py  get_ftp_credentials.py  remote_validate.py  upload_data_files.py  upload_metadata_files.py  upload_study.py  utils.py  validate_study.py
mztabm2mtbls/mapper/: base_mapper.py  map_model.py  metadata_base.py  metadata_contact.py  metadata_cv.py  metadata_publication.py  metadata_sample.py  metadata_study_variable.py  utils.py
mztabm2mtbls/resources/: s_MTBLS.txt
output/: a_MTBLS_metabolite_profiling.txt  i_Investigation.txt  s_MTBLS.txt
output/MTBLS1000000/: README.txt  a_MTBLS1000000_metabolite_profiling.txt  i_Investigation.txt  m_MTBLS1000000_metabolite_profiling_v2_maf.tsv  s_MTBLS1000000.txt  singaporean-plasma-site1.mzTab.json
output/MTBLS1000001/: README.txt  a_MTBLS1000001_metabolite_profiling.txt  i_Investigation.txt
resources/: a_MTBLS_metabolite_profiling.txt  a_template_MS-phase_metabolite_profiling.txt  i_Investigation.txt  m_MTBLS_metabolite_profiling_v2_maf.tsv
submission_validation_test/MTBLS263/: MTBLS263.mztab  MTBLS263.mztab.json  MTBLS263.mztab.validation.txt  MTBLS263_validation_input.json  MTBLS263_validation_output.json
(+125 files in other folders)
