[project]
name = "mztabm2mtbls"
version = "0.1.0"
description = "A library and scripts to convert mzTab-M to MetaboLights ISA-tab format"
readme = "README.md"
license = "Apache 2.0"
requires-python = ">=3.10,<4.0"
dependencies = [
    "click>=8.3.0",
    "metabolights-utils>=1.4.9",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
