[project]
name = "mztabm2mtbls"
version = "0.1.0"
description = "A library and scripts to convert mzTab-M to MetaboLights ISA-tab format"
readme = "README.md"
license = "Apache 2.0"
requires-python = ">=3.10,<4.0"
dependencies = [
    "click>=8.3.3",
    "metabolights-utils>=1.4.29",
    "pymztabm",
    "python-dotenv>=1.2.2",
    "pygments>=2.20.0",
    "opa-wasmtime>=0.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I"]
ignore= ["F401", "F403", "F541", "F841", "F405", "G003" ]
fixable = ["ALL"]

[tool.pytest.ini_options]
addopts = "-v -s --log-cli-level=INFO"
testpaths = ["test", "tests"]

[tool.uv.sources]
pymztabm = { git = "https://github.com/lifs-tools/pymzTab-m.git", rev = "development" }
